--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,15 @@
+[management]
+ws_no = 20
+params_max_size = 8
+ws_id_size = {:0>3}
+ws_key_size = 30
+
 [database]
-url = mysqldb-server
-user = dopa_user
+url = 172.17.0.3
+user = perseus
 password = P@ss4321
 dbname  = pwsga
+
+
+[webservice]
+ws_url = http://172.17.0.1:8080/service
